stateDiagram-v2
  [*] --> connecting

  connecting --> lobby: state_sync [state=idle|configured]
  connecting --> playing: state_sync [state=playing]
  connecting --> results: state_sync [state=results]
  connecting --> lobby: join_success [state=idle|configured]
  connecting --> playing: join_success [state=playing]
  connecting --> results: join_success [state=results]
  connecting --> error: socket_error

  lobby --> playing: game_started
  lobby --> lobby: room_configured
  lobby --> results: game_ended
  lobby --> error: socket_error

  playing --> results: game_ended
  playing --> lobby: room_configured
  playing --> error: socket_error

  results --> lobby: state_sync [state=idle|configured]
  results --> playing: state_sync [state=playing]
  results --> error: socket_error

  error --> connecting: socket_close
  error --> lobby: state_sync [state=idle|configured]
  error --> playing: state_sync [state=playing]
  error --> results: state_sync [state=results]